# Parallel-Computing

common/src/mesh/: IDGenerator.cpp
common/src/mf/: ElementMFSF.cpp
conf/: FindPETSc.cmake  FindSLEPc.cmake  basic_variable_log.cmake  message_compiler_setup.cmake  petsc_compat.hpp  project_build_setup.cmake  system_lib_loading.cmake
eigenvalue_problem/: CMakeLists.txt  condition_number_1d.cpp  error_1d.cpp  iteration_number_fempc.cpp
eigenvalue_problem/src/: GlobalAssembly.cpp
matrix_free/: CMakeLists.txt  iteration_number_fempc.cpp  iteration_number_fempc_mf.cpp  iteration_number_fempc_mfsf.cpp  mult_mf.cpp  mult_sf.cpp
matrix_free/include/: MatrixFreeMode.hpp
matrix_free/src/: GlobalAssembly.cpp
matrix_free_gpu/: CMakeLists.txt
matrix_free_gpu/src/: GlobalAssemblyDR.cpp
matrix_free_gpu_dbd/: CMakeLists.txt  matrixfreegpu.cu  multtest.cu
matrix_free_mpi_gpu/: ghost_map.cpp  matrixfreegpu.cu  multtest.cu
test/: CMakeLists.txt
